# cpg-notebook-utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  lint.yaml
cpg_notebook/: __init__.py  datascience.py  genomics.py  pop_genetics.py
docs/: genomics.md  pop_genetics.md
